# workstack

./: .REFACTOR-graphite-json-parsing.md  .coverage  .env  .gitignore  .mdstack.config.yaml  .prettierignore  AGENTIC_PROGRAMMING.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DOCUMENTATION_REVIEW.md  FEATURE_IDEAS.md  FEATURE_IMPACT_ANALYSIS.md  FEATURE_INDEX.md  GRAPHITE_FEATURE_IDEAS.md  Makefile  PHASE-6-PLAN.md  PHASE_3_4_PLAN.md  README.md  REBASE_IMPROVEMENTS_ANALYSIS.md  REFACTOR_PROGRESS.md  SANDBOX_REBASE_SPEC.md  STACKED_REBASE_MASTER_PLAN.md  STACKED_REBASE_PR2_STACK_MANAGER.md  STACKED_REBASE_PR3_BASIC_CLI.md  STACKED_REBASE_PR4_CONFLICT_RESOLUTION.md  STACKED_REBASE_PR5_TESTING.md  STACKED_REBASE_PR6_POLISH.md  SYNCHRONIZED_PUBLISH_PLAN.md  code-review-the-whole-shebang-20251013-072835.md  devclikit-extraction-plan.md  dot-agent.toml  pyproject.toml
.agent/: AGENTIC_PROGRAMMING.md  AGENTS.md  ARCHITECTURE.md  CHEATSHEET.md  FEATURE_INDEX.md  GLOSSARY.md  README.md  RULES_CARD.md  WORKSTACK_DEV.md  tool.github.md
.agent/docs/: EXCEPTION_HANDLING.md  HOOKS.md  MODULE_MAP.md  PATTERNS.md  PUBLISHING.md  QUICK_REFERENCE.md  README.md  TESTING.md
.agent/tools/: gh.md  gt.md  workstack.md
.claude/: settings.json
.claude/agents/: git-diff-summarizer.md  graphite-haiku.md  gt-runner.md  haiku-plan-executor.md  implementation-planner.md  makefile-runner.md  pyright-runner.md  pytest-runner.md  ruff-runner.md  sonnet-plan-executor.md  spec-creator.md
.claude/commands/: check-docs.md  codex-review.md  create-implementation-plan.md  create-spec.md  create_implementation_plan.md  ensure-ci.md  execute-implementation-plan.md  execute-plan.md  haiku-execute-plan.md  land-branch.md  land-stack.md  publish.md  publish_to_pypi.md  sonnet-execute-plan.md  submit-branch.md  submit-stack.md
.claude/hooks/: suggest-dignified-python.py
.claude/shared/: plan-executor-shared.md
.github/workflows/: check-sync.yml  claude-code-review.yml  lint.yml  prettier.yml  pyright.yml  sync-kit-check.yml  test.yml
.work/: config.toml
.work/another-branch/: .env  .gitignore  AGENTS.md  pyproject.toml
docs/: MODULE_MAP.md  PATTERNS.md  README.md
scripts/: publish.py
src/dev_cli_core/: README.md  __init__.py  cli_factory.py  completion.py  exceptions.py  loader.py  runner.py
src/work/: __init__.py  cli.py  git.py  naming.py
src/workstack/: CLAUDE.md  __init__.py  __main__.py  activation.py  cli.py  config.py  context.py  core.py  detect.py  file_utils.py  git.py  github_ops.py  githubops.py  gitops.py  global_config_ops.py  graphite.py  graphite_ops.py  graphiteops.py  naming.py  shell_utils.py  tree.py
tests/: CLAUDE.md  __init__.py  conftest.py  test_activation.py  test_agents_symlinks.py  test_completion.py  test_config_and_env.py  test_detect_dagster.py  test_detect_default_branch.py  test_github_ops.py  test_list.py  test_move.py  test_naming.py  test_plan.py  test_rename.py  test_rm.py  test_setup_template.py  test_shell_utils.py  test_switch.py  test_sync.py
tests/builders/: __init__.py  gitops.py
tests/commands/: CLAUDE.md  test_config.py  test_create.py  test_gc.py  test_init.py  test_list.py  test_plan.py  test_prepare_cwd_recovery.py  test_rename.py  test_rm.py  test_shell_integration.py  test_shell_wrappers.py  test_status.py  test_status_with_fakes.py  test_switch.py  test_switch_up_down.py  test_tree.py
tests/core/: CLAUDE.md  __init__.py  test_config_and_env.py  test_conflict_resolver.py  test_context.py  test_detect_dagster.py  test_execution_result.py  test_file_utils.py  test_gitops_unit.py  test_naming.py  test_parallel_executor.py  test_rebase_stack_ops.py  test_rebase_utils.py  test_setup_template.py  test_stack_test_runner.py
tests/dev_cli/: test_commands.py  test_completion.py  test_create_agents_symlinks.py  test_loader.py  test_publish_to_pypi.py
tests/dev_cli_core/: test_completion.py  (+4 more)
(+276 files in other folders)
