[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
workstack-dev = { workspace = true }
dot-agent-kit = { workspace = true }

[project]
name = "workstack"
version = "0.1.18"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dagster Labs", email = "hello@dagsterlabs.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
    "python-frontmatter>=1.0.0",
]

[project.scripts]
workstack = "workstack.cli.cli:main"

[dependency-groups]
dev = [
    "workstack-dev",
    "dot-agent-kit",
    "ruff>=0.5.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pyright>=1.1.406",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.ruff.lint.isort]
known-first-party = ["workstack", "workstack_dev", "dot_agent_kit"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["src", "packages/workstack-dev/src", "packages/dot-agent-kit/src"]
venvPath = "."
venv = ".venv"
reportMissingImports = "warning"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests", "packages/workstack-dev/tests", "packages/dot-agent-kit/tests"]
